// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 1`] = `
Object {
  "CreateOrUpdateArticleReplyFeedback": Object {
    "articleId": "article1",
    "feedbackCount": 12,
    "feedbacks": Array [
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": "comment1",
        "vote": "UPVOTE",
      },
    ],
    "negativeFeedbackCount": 0,
    "ownVote": "UPVOTE",
    "positiveFeedbackCount": 12,
    "replyId": "reply1",
  },
}
`;

exports[`CreateOrUpdateArticleReplyFeedback updates existing feedback 1`] = `
Object {
  "CreateOrUpdateArticleReplyFeedback": Object {
    "articleId": "article1",
    "feedbackCount": 11,
    "feedbacks": Array [
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "UPVOTE",
      },
      Object {
        "comment": null,
        "vote": "DOWNVOTE",
      },
    ],
    "negativeFeedbackCount": 1,
    "ownVote": "DOWNVOTE",
    "positiveFeedbackCount": 10,
    "replyId": "reply1",
  },
}
`;
